--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fridLayout"
+    android:id="@+id/gridLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="1"
@@ -51,23 +51,13 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_horizontal"
-            android:gravity="center_horizontal"
-            android:text="@string/taggedSearches"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <ListView
-            android:id="@android:id/list"
+        <FrameLayout
+            android:id="@+id/fragment"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="fill"
-            android:layout_marginBottom="@dimen/tagged_searches_padding"
-            android:layout_marginTop="@dimen/tagged_searches_padding"
-            android:layout_weight="1" />
+            android:layout_height="match_parent">
+
+         </FrameLayout>
         
     </LinearLayout>
 
